deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test2-deployment
  namespace: test2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test2
  template:
    metadata:
      labels:
        app: test2
    spec:
      containers:
      - name: test2
        image: nxs.home.kinga.cloud:9876/test2:lv01
        ports:
        - containerPort: 8000
