service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test2-service
  namespace: test2
spec:
  type: ClusterIP
  selector:
    app: test2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
