ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test2-ingress
  namespace: test2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - "test2.home.kinga.cloud"
    secretName: test2-tls-secret
  rules:
  - host: "test2.home.kinga.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test2-service
            port:
              number: 80
